# profile.mobile.apps.native.ug-image-viewer-efl

./: .cproject  .project  CMakeLists.txt  app.xml  image-viewer.manifest.xml  image-viewer.xml  org.tizen.image-viewer-1.0.0-arm-debug.tpk  org.tizen.image-viewer-1.0.0-arm.tpk  org.tizen.image-viewer-1.0.0-arm_debug.tpk  org.tizen.image-viewer-1.0.0-i386-debug.tpk  org.tizen.image-viewer-1.0.0-i386.tpk  org.tizen.image-viewer-1.0.0-i386_debug.tpk  project_def.prop  tizen-manifest.xml  ug-image-viewer-efl.manifest  ug-image-viewer-efl.xml  ug-image-viewer.cpp
common/: CMakeLists.txt
common/include/: debug.h  ivug-config.h  ivug-debug.h  ivug-file-util.h  ivug-util.h  ivug-uuid.h  statistics.h
common/src/: debug.c  ivug-config.c  ivug-db.c  ivug-dir.cpp  ivug-file-info.c  ivug-language-mgr.c  ivug-util.c  ivug-uuid.c  statistics.c
feature/: CMakeLists.txt
feature/include/: ivug-player.h  ivug-transcoder.h
feature/src/: ivug-comment.cpp  ivug-motion.cpp  ivug-player.cpp  ivug-transcoder.cpp  ivug-vibration.c
feature/src/exif/: exif.h  global.h  jpeg.cpp  jpeg.h
inc/: File.h  debug.h  iv-button.h  ivug-base.h  ivug-callback.h  ivug-comment.h  ivug-common.h  ivug-config.h  ivug-context.h  ivug-crop-view.h  ivug-db.h  ivug-debug.h  ivug-decolayer.h  ivug-define.h  ivug-dir.h  ivug-effect.h  ivug-exif.h  ivug-ext-ug.h  ivug-file-info.h  ivug-file-util.h  ivug-language-mgr.h  ivug-main-view-menu.h  ivug-main-view.h  ivug-media.h  ivug-mediadata.h  ivug-mediainfo.h  ivug-medialist.h  ivug-message.h  ivug-motion.h  ivug-name-view.h  ivug-parameter.h  ivug-photocam.h  ivug-popup.h  ivug-slider-new.h  ivug-slideshow-priv.h  ivug-slideshow-view.h  ivug-slideshow.h  ivug-string.h  ivug-util.h  ivug-vibration.h
include/: ivug-datatypes.h  ivug-define.h
main/: CMakeLists.txt
main/layout/: ivug-best.edc  ivug-button.edc  ivug-face-view.edc  ivug-icons.edc  ivug-main.edc  ivug-name-view.edc  ivug-nearby-device.edc  ivug-popup.edc  ivug-setas.edc  ivug-slider-new-hd.edc  ivug-slider-new.edc  ivug-slider.edc  ivug-tag-buddy.edc  ivug-thumblist.edc  weather-tag-buddy.edc
main/src/: ivug-base.cpp
main/src/control/: ivug-context.c  ivug-context.h  ivug-crop-ug.cpp  ivug-crop-ug.h  ivug-ext-ug.c  ivug-parameter.c  ivug-parameter.h
main/src/decolayer/: ivug-decolayer.cpp
main/src/include/: ivug-base.h  ivug-buddy-view.h  ivug-common.h  ivug-ext-ug.h  ivug-main-view.h  ivug-name-view.h  ivug-slider-new.h  ivug-slideshow-view.h  ivug-smart-event-box.h
main/src/popup/: ivug-popup.c  ivug-popup.h
main/src/slider/: ivug-slider-new.cpp
main/src/thumblist/: ivug-thumblist.cpp  ivug-thumblist.h
main/src/view/: ivug-buddy-view.c  ivug-main-view-menu.cpp  ivug-main-view-menu.h  ivug-main-view-priv.h  ivug-main-view-toolbar.cpp  ivug-main-view-toolbar.h  ivug-main-view.cpp  ivug-name-view.c  ivug-photocam.cpp  ivug-photocam.h  ivug-slideshow-view.cpp  ivug-smart-event-box.c
medialist/: CMakeLists.txt
medialist/include/: ivug-filter.h  ivug-media.h  ivug-medialist.h
medialist/src/: ivug-data-list.c  ivug-data-list.h  ivug-filter.c  ivug-mediadata.c  ivug-mediainfo.cpp  ivug-medialist.cpp
res/: CMakeLists.txt
res/dumpscript/: dump-image-viewer.sh
res/edje/: genlist_styles.edc  ivug-base.edc  ivug-buddy-view.edc  ivug-button.edc  ivug-crop-view.edc  ivug-custom.edc  ivug-details.edc  ivug-edit-weather-view.edc  ivug-effect.edc  ivug-gengrid.edc  ivug-genlist.edc  ivug-icons.edc  ivug-naviframe.edc  ivug-nearby-device.edc  ivug-slider-new-hd.edc  ivug-slider-new.edc  ivug-widget-button.edc
res/include/: ivug-string.h
res/po/: .pot  CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  csv2po_v2  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl.po  pl.po  pt_BR.po  (+14 more)
res/xml/: ug-image-viewer-efl_ChangeableColorInfo.xml  ug-image-viewer-efl_ChangeableFontInfo.xml
slideshow/: CMakeLists.txt
slideshow/include/: ivug-slideshow.h
slideshow/res/layout/: ivug-ss-ly.edc
slideshow/src/control/: ivug-slideshow.cpp
slideshow/src/effect/: ivug-effect.c  ivug-fade.c  ivug-slide.c  template.c
slideshow/src/effect/include/: ivug-anim.h  ivug-effect.h
slideshow/src/include/: ivug-slideshow-priv.h
src/: CMakeLists.txt  CMakeLists.txt~  ug-image-viewer.cpp
src/common/: debug.c  ivug-callback.c  ivug-config.c  ivug-db.c  ivug-exif.c  ivug-file-info.c  ivug-file-util.c  ivug-language-mgr.c  ivug-message.c  ivug-util.c  ivug-uuid.c  statistics.c
src/feature/: ivug-comment.cpp  ivug-motion.cpp  ivug-transcoder.cpp  jpeg.cpp
src/main/: ivug-base.cpp
src/main/control/: ivug-context.c  ivug-crop-ug.cpp  ivug-ext-ug.c  ivug-parameter.c
src/main/decolayer/: iv-button.cpp  ivug-decolayer.cpp
src/main/popup/: ivug-popup.c
src/main/slider/: ivug-slider-new.cpp
src/main/thumblist/: ivug-thumblist.cpp
src/main/view/: ivug-main-view-menu.cpp  ivug-main-view-toolbar.cpp  ivug-main-view.cpp  ivug-name-view.c  ivug-photocam.cpp  ivug-slideshow-view.cpp
src/medialist/: ivug-data-list.c  ivug-mediadata.c  ivug-mediainfo.cpp  ivug-medialist.cpp
src/slideshow/control/: ivug-slideshow.cpp
src/slideshow/effect/: ivug-anim.c  ivug-effect.c  ivug-fade.c  ivug-slide.c
theme/: CMakeLists.txt  ivug-custom.edc
theme/inc/: ivug-theme-white.edc
theme/widgets/: ivug-ctxpopup.edc  ivug-selectioninfo.edc  ivug-toolbar.edc
theme/widgets/genlist/: genlist_group_index.edc  genlist_macro.edc  genlist_textblock_styles.edc
widget/: CMakeLists.txt
widget/include/: Animation.h  ECoreAnimator.h  EFLUtil.h  EvasSmartObj.h  Exception.h  Object.h  Primitives.h  ScrollerClient.h  Transit.h  ivug-image.h  ivug-listpopup.h  ivug-video.h  ivug-widget.h
widget/res/layout/: ivug-scroller.edc  ivug-widget-icons.edc
widget/src/common/: BufferCanvas.h  iv-button.cpp
widget/src/util/: EFLUtil.cpp  ivug-listpopup.c  ivug-widget.c
widget/src/video/: VideoView.h  Videocam.cpp  Videocam.h  ivug-video.cpp
(+4 files in other folders)
