CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(ug-image-viewer-efl C CXX)

SET(IVUG_PACKAGE_NAME "ug-image-viewer-efl")

SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)

SET(CMAKE_INSTALL_PREFIX ${TZ_SYS_RO_UG})
SET(IVUG_DATA_DIR "${TZ_USER_UG}/data/ug-image-viewer-efl")
# BUILD_TC can have TRUE or FALSE
#SET(BUILD_TC TRUE)

IF("${ARCH}" STREQUAL "arm")
	ADD_DEFINITIONS("-DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

ADD_DEFINITIONS("-DUG_MODULE_API=__attribute__ \(\(visibility\(\"default\"\)\)\)")
ADD_DEFINITIONS("-DPACKAGE=\"${PROJECT_NAME}\"")
ADD_DEFINITIONS("-DDATADIR=\"${CMAKE_DATA_DIR}\"")
ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
#ADD_DEFINITIONS("-DPACKAGE=\"${IVUG_PACKAGE_NAME}\"")
ADD_DEFINITIONS("-DIVAPI=")

SET(IVUG_SOURCE_COMMON_DIR 		"${CMAKE_SOURCE_DIR}/common")
SET(IVUG_SOURCE_WIDGET_DIR 		"${CMAKE_SOURCE_DIR}/widget")
SET(IVUG_SOURCE_MAIN_DIR 		"${CMAKE_SOURCE_DIR}/main")
SET(IVUG_SOURCE_MEDIA_DIR 		"${CMAKE_SOURCE_DIR}/medialist")
SET(IVUG_SOURCE_SLIDESHOW_DIR 	"${CMAKE_SOURCE_DIR}/slideshow")
SET(IVUG_SOURCE_FEATURE_DIR 	"${CMAKE_SOURCE_DIR}/feature")
SET(IVUG_SOURCE_RESOURCE_DIR 	"${CMAKE_SOURCE_DIR}/res")
SET(IVUG_SOURCE_EXTERN_DIR 		"${CMAKE_SOURCE_DIR}/extern")
SET(IVUG_SOURCE_DEFINE_DIR 	"${CMAKE_SOURCE_DIR}/include")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${EXTRA_CXXFLAGS}")

message("CFLAGS="${CMAKE_C_FLAGS})
message("CXXFLAGS="${CMAKE_CXX_FLAGS})
message("LDFLAGS="${CMAKE_LDFLAGS})

FUNCTION (BUILD_EDJ _in _out _base _dir)
	ADD_CUSTOM_TARGET(${_out}
			COMMAND
				edje_cc
				-id ${_base}/${_dir}
				-sd ${_base}/${_dir}
				-DDEFINE_H=${IVUG_SOURCE_DEFINE_DIR}
				${CMAKE_CURRENT_SOURCE_DIR}/${_base}/${_in}
				${CMAKE_CURRENT_SOURCE_DIR}/${_base}/${_out}
			DEPENDS
				${CMAKE_CURRENT_SOURCE_DIR}/${_base}/${_in}
	)
	ADD_DEPENDENCIES(${PROJECT_NAME} ${_out})
	INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${_base}/${_out} DESTINATION ${CMAKE_INSTALL_PREFIX}/res/edje/${IVUG_PACKAGE_NAME})
ENDFUNCTION (BUILD_EDJ)

FUNCTION (BUILD_EDJ_SOUND _in _out _base _dir _sound)
	ADD_CUSTOM_TARGET(${_out}
			COMMAND
				edje_cc
				-id ${_base}/${_dir}
				-sd ${_base}/${_sound}
				-DDEFINE_H=${IVUG_SOURCE_DEFINE_DIR}
				${CMAKE_CURRENT_SOURCE_DIR}/${_base}/${_in}
				${CMAKE_CURRENT_SOURCE_DIR}/${_base}/${_out}
			DEPENDS
				${CMAKE_CURRENT_SOURCE_DIR}/${_base}/${_in}
	)
	ADD_DEPENDENCIES(${PROJECT_NAME} ${_out})
	INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${_base}/${_out} DESTINATION ${CMAKE_INSTALL_PREFIX}/res/edje/${IVUG_PACKAGE_NAME})
ENDFUNCTION (BUILD_EDJ_SOUND)

ADD_SUBDIRECTORY(main)
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(medialist)
ADD_SUBDIRECTORY(widget)
ADD_SUBDIRECTORY(slideshow)
ADD_SUBDIRECTORY(feature)
ADD_SUBDIRECTORY(res)
ADD_SUBDIRECTORY(theme)

IF (BUILD_TC)
	ADD_SUBDIRECTORY(TC)
ENDIF()

SET(SRCS
	ug-image-viewer.cpp
)
INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED
	elementary
	ui-gadget-1
	capi-appfw-application
	capi-appfw-app-manager
	appsvc
	efl-extension
	capi-system-runtime-info
	capi-system-system-settings
	libtzplatform-config
)
INCLUDE_DIRECTORIES(
	include
	common/include
	main/src/control
	main/src/include
)

FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_FLAGS "${EXTRA_FLAGS} ${flag}")
ENDFOREACH(flag)

#ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})

SET(VERSION_MAJOR 0)
SET(VERSION "${VERSION_MAJOR}.1.0")
SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed -pie -Wl,-z,noexecstack")

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION ${VERSION_MAJOR})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION ${VERSION})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "${EXTRA_FLAGS}")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	${pkgs_LDFLAGS}
#	"-Wl,--whole-archive"
	image-viewer	
#	"-Wl,--no-whole-archive "
)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)

# Install manifest
INSTALL(FILES ug-image-viewer-efl.xml DESTINATION ${TZ_SYS_RO_PACKAGES} RENAME image-viewer-efl.xml)

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/res/appicon/icon.png DESTINATION
${CMAKE_INSTALL_PREFIX}/res/images/ug-imagTZ_SYS_RO_ICONSe-viewer-efl
RENAME ${IVUG_PACKAGE_NAME}.png)

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/res/appicon/icon.png DESTINATION
${TZ_SYS_RO_ICONS}/default/small RENAME ${IVUG_PACKAGE_NAME}.png)

