CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(image-viewer C CXX)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})

# subdir
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(src/common)
ADD_SUBDIRECTORY(src/feature)
ADD_SUBDIRECTORY(src/main)
ADD_SUBDIRECTORY(src/main/control)
ADD_SUBDIRECTORY(src/main/decolayer)
ADD_SUBDIRECTORY(src/main/popup)
ADD_SUBDIRECTORY(src/main/slider)
ADD_SUBDIRECTORY(src/main/thumblist)
ADD_SUBDIRECTORY(src/main/view)
ADD_SUBDIRECTORY(src/medialist)
ADD_SUBDIRECTORY(src/slideshow)
ADD_SUBDIRECTORY(src/slideshow/control)
ADD_SUBDIRECTORY(src/slideshow/effect)
ADD_SUBDIRECTORY(res/edje)
ADD_SUBDIRECTORY(res/edje/icons)
ADD_SUBDIRECTORY(res/edje/images)
ADD_SUBDIRECTORY(res/po)
ADD_SUBDIRECTORY(res/edje/sounds)

CONFIGURE_FILE(image-viewer.manifest-3.0.in ${PKGNAME}.manifest)

INSTALL(FILES image-viewer.manifest.xml DESTINATION ${MANIFESTDIR} RENAME ${PKGNAME}.xml)
INSTALL(FILES shared/res/org.tizen.image-viewer.png DESTINATION ${ICONDIR})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/res/edje/images/ DESTINATION ${IMGDIR})
