CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(ivug_medialist C CXX)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(VERSION 0.1.0)

INCLUDE_DIRECTORIES(
	include
	src
	${CMAKE_SOURCE_DIR}/include
	${IVUG_SOURCE_COMMON_DIR}/include
	${IVUG_SOURCE_FEATURE_DIR}/include
	${IVUG_SOURCE_RESOURCE_DIR}/include
)

SET(SRCS
	src/ivug-medialist.cpp
	src/ivug-mediadata.c
	src/ivug-data-list.c
	src/ivug-filter.c
	src/ivug-mediainfo.cpp
)

INCLUDE(FindPkgConfig)
pkg_check_modules(${PROJECT_NAME}_pkgs REQUIRED
	elementary
	dlog
	ui-gadget-1
	eina
	ecore
	capi-content-media-content
)

FOREACH(flag ${${PROJECT_NAME}_pkgs_CFLAGS})
	SET(EXTRA_FLAGS "${EXTRA_FLAGS} ${flag}")
ENDFOREACH(flag)

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SRCS})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION ${VERSION} )
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS ${EXTRA_FLAGS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${${PROJECT_NAME}_pkgs_LDFLAGS}
ivug_common ivug_feature)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)

